@startuml
class TravelStart
class User
class TravelCard
class Conductor
class CheckIn
class TransportDB

TravelStart *--TransportDB
CheckIn *--TransportDB

TravelStart *-- User
User *-- TravelCard

CheckIn *--Conductor

CheckIn *--FileIO
TravelStart*--CheckIn
TravelStart *--FileIO

TransportDB : +establishConnection()
TransportDB : +findBalanceInDB()
TransportDB : +updateBalance()

TravelStart : +Main
TravelStart : +loginAndRegister(User currentUser)
TravelStart : +travel(User (User currentUser)

CheckIn : +checkIn()
CheckIn : +getTravelCost()

 User : -name
 User : -password
 User : +TravelCard travelcard
 User : +boolean checkInState
 User : +String transportChoice
 User : +getter & setter()
 User : +String toString()

TravelCard : -balance
TravelCard : +addToBalance(double money)
TravelCard : +subtractFromBalance(double cost)
TravelCard : +getBalance()
TravelCard : +setBalance(double balance)

Conductor : +conductorChance()

FileIO : +makeRoute40E(startDestination, endDestination)
FileIO : +getZones40E(startDestination, endDestination)
FileIO : +makeRouteLinjeB(startDestination, endDestination)
FileIO : +getZonesLinjeB(startDestination, endDestination)

@enduml